--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    font-family: "League Spartan", sans-serif;
+  }
+}
